<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.julia.callmenavigation.CreateAccountActivity"
    tools:showIn="@layout/activity_create_account">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/create_account_title"
        android:textSize="40dp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <EditText
                android:id="@+id/mFirstName"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:width="300sp"
                android:hint="@string/create_account_first_name"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/mLastName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/create_account_last_name"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/mStreetAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/create_account_street_address"/>

        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/mCity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/create_account_city"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/mState"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/create_account_state"/>

        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/mCountry"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/create_account_country"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/mCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_account_button"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimaryDarker"
        android:textColor="@color/colorAccent"/>


</LinearLayout>
