<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:clickable="true"
        android:id="@+id/mSavedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <TableRow>
                <TextView
                    android:text="@string/time_text"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/mDate"
                    android:layout_marginLeft="20dp"
                    android:text="@string/default_wait"
                    android:textSize="20dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/longitude_text"
                    android:textSize="20dp"
                    />
                <TextView
                    android:layout_marginLeft="20dp"
                    android:id="@+id/mLongitude"
                    android:text="@string/default_wait"
                    android:textSize="20dp"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/latitude_text"
                    android:textSize="20dp"
                    />
                <TextView
                    android:layout_marginLeft="20dp"
                    android:id="@+id/mLatitude"
                    android:text="@string/default_wait"
                    android:textSize="20dp"
                    />
            </TableRow>

        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/mTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:layout_marginRight="10px"
            android:layout_marginTop="5px"/>
        <Button
            android:id="@+id/mDelete"
            android:text="@string/delete_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</LinearLayout>