<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:clickable="true"
        android:id="@+id/mLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <TableRow>
            <TextView
                android:text="@string/time_text"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/mDate"
                android:layout_marginLeft="10dp"
                android:text="@string/default_wait"
                android:textSize="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/longitude_text"
                android:textSize="20dp"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/mLongitude"
                android:text="@string/default_wait"
                android:textSize="20dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/latitude_text"
                android:textSize="20dp"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/mLatitude"
                android:text="@string/default_wait"
                android:textSize="20dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/geocoding_text"
                android:textSize="15dp" />
            <TextView
                android:text="@string/default_wait"
                android:textSize="15dp"
                android:id="@+id/mApproximate"
                android:layout_marginLeft="10dp"/>
        </TableRow>
    </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/mTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:layout_marginRight="10px"
            android:layout_marginTop="5px"/>
        <CheckBox
            android:id="@+id/mSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>


    </LinearLayout>
    <ImageView
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:scaleX="4"
        android:src="@drawable/line_seperation_2"/>
  <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="vertical">
        <com.google.android.gms.maps.MapView
            android:id="@+id/mRecyclerMap"
            android:layout_width="match_parent"
            android:layout_height="100dp">

        </com.google.android.gms.maps.MapView>
    </LinearLayout>
    -->
</LinearLayout>