<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.julia.callmenavigation.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_header_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_gmail"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"/>
    <TableLayout
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TableRow>
            <EditText
                android:id="@+id/mEmail"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColorHint="@color/colorAccent"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:textColorHint="@color/colorAccent" />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/mLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/login_button"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimaryDarker"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>
